--- a/library.properties
+++ b/library.properties
@@ -1,5 +1,5 @@
 name=MCCI Arduino LoRaWAN library
-version=0.2.4
+version=0.2.5-alpha1
 author=MCCI Corporation
 maintainer=Terry Moore <tmm@mcci.com>
 sentence=High-level library for LoRaWAN-based Arduino end-devices
