Update version and reference URL

--- a/library.properties
+++ b/library.properties
@@ -1,9 +1,9 @@
 name=MCCI Arduino LoRaWAN library
-version=0.2.5-alpha1
+version=0.2.5
 author=MCCI Corporation
 maintainer=Terry Moore <tmm@mcci.com>
 sentence=High-level library for LoRaWAN-based Arduino end-devices
 paragraph=Implements many of the details of network interfacing and deployment, so that you can focus on your application rather than worrying about the network. Requires the arduino-lmic library from The Things Network NY.
 category=Communication
-url=https://github.com/terrillmoore/arduino-lorawan/
+url=https://github.com/mcci-catena/arduino-lorawan/
 architectures=*
