Update version in library.properties
Preparing for release; this library is backwards compatible, but includes support for the Murata module. It also requires V2.1.0 of the arduino-lmic library.

--- a/library.properties
+++ b/library.properties
@@ -1,6 +1,6 @@
 name=MCCI Arduino LoRaWAN library
-version=0.2.5
-author=MCCI Corporation
+version=0.3.0
+author=MCCI Corporation, Terry Moore, ChaeHee Won
 maintainer=Terry Moore <tmm@mcci.com>
 sentence=High-level library for LoRaWAN-based Arduino end-devices
 paragraph=Implements many of the details of network interfacing and deployment, so that you can focus on your application rather than worrying about the network. Requires the arduino-lmic library from The Things Network NY.
