--- a/library.properties
+++ b/library.properties
@@ -1,9 +1,11 @@
-name=MCCI Arduino LoRaWAN library
-version=0.3.2
-author=MCCI Corporation, Terry Moore, ChaeHee Won
+name=Arduino-LoRaWAN
+version=0.3.3
+author=Terry Moore, ChaeHee Won
 maintainer=Terry Moore <tmm@mcci.com>
-sentence=High-level library for LoRaWAN-based Arduino end-devices
-paragraph=Implements many of the details of network interfacing and deployment, so that you can focus on your application rather than worrying about the network. Requires the arduino-lmic library from The Things Network NY.
+sentence=High-level library for LoRaWAN-based Arduino end-devices.
+paragraph=Implements many of the details of network interfacing and deployment, so that you can focus on your application rather than worrying about the network. Requires the arduino-lmic library from https://github.com/mcci-catena/ or The Things Network NY.
 category=Communication
 url=https://github.com/mcci-catena/arduino-lorawan/
 architectures=*
+dot_a_linkage=true
+includes=Arduino_LoRaWAN.h
