Fix library properties and set version

--- a/library.properties
+++ b/library.properties
@@ -1,5 +1,5 @@
-name=Arduino-LoRaWAN
-version=0.3.3
+name=MCCI Arduino LoRaWAN Library
+version=0.3.4
 author=Terry Moore, ChaeHee Won
 maintainer=Terry Moore <tmm@mcci.com>
 sentence=High-level library for LoRaWAN-based Arduino end-devices.
