--- a/.travis.yml
+++ b/.travis.yml
@@ -28,7 +28,8 @@ before_install:
   - "function _stm32l0opts { echo mcci:stm32:Catena:pnum=${1:-CATENA_4551},opt=${3:-osstd},xserial=${4:-generic},usb=${5:-none},upload_method=${6:-STLink} ; }"
   #
   # Put one or more arguments into lmic_project_config.h as  `#define $i\n`
-  - function _projcfg { for i in "$@" ; do printf '#define %s 1\n' "$i" ; done  > $HOME/arduino_ide/libraries/arduino-lmic/project_config/lmic_project_config.h ; }
+  # If an argument is A=B, produce '#define A B".'
+  - function _projcfg { function _projcfg { for i in "$@" ; do echo $i | awk 'BEGIN { FS="=" } { if ($2 == "") $2 = 1; printf("#define %s %s\n", $1, $2); }' ; done  > $HOME/arduino_ide/libraries/arduino-lmic/project_config/lmic_project_config.h ; }
   #
   # Handy macro to deal with expected failures.
   - 'function _expect_failure { if [ $? -eq 0 ]; then echo "Suceeded, but should have failed!" ; echo project_config/lmic_project_config.h ; cat $HOME/arduino_ide/libraries/arduino-lmic/project_config/lmic_project_config.h ; return 1 ; else echo "Failed, as expected"; return 0 ; fi ; }'
