--- a/.travis.yml
+++ b/.travis.yml
@@ -41,8 +41,7 @@ install:
  - git clone --depth=1 https://github.com/mcci-catena/Catena-mcciadk.git $HOME/arduino_ide/libraries/Catena-mcciadk
  - git clone --depth=1 https://github.com/mcci-catena/arduino-lmic.git $HOME/arduino_ide/libraries/arduino-lmic
  - arduino --install-boards mcci:samd
-
-# - arduino --install-boards mcci:stm32
+ - arduino --install-boards mcci:stm32
 
 script:
 #
@@ -51,7 +50,7 @@ script:
  - "echo $(_samdopts) $(_samdopts '' projcfg)"
 
 #
-# test each of the regions.
+# test each of the regions for SAMD.
  - arduino --verify --board $(_samdopts '' us915) $THISLIB/examples/header_test/header_test.ino
  - arduino --verify --board $(_samdopts '' eu868) $THISLIB/examples/header_test/header_test.ino
 # V1.1.0 of the samd bsp doesn't support au921 correctly -- test with projcfg
@@ -82,7 +81,25 @@ script:
 #
 # *** TESTS FOR STM32L0 / Catena 4551 ****
 #  make sure you install the BSP above.
-#
-# - arduino --verify --board $(_stm32l0opts) $THISLIB/examples/header_test/header_test.ino
+ - _projcfg CFG_us915 CFG_sx1276_radio && arduino --verify --board $(_stm32l0opts projcfg) $THISLIB/examples/header_test/header_test.ino
+ - _projcfg CFG_eu868 CFG_sx1276_radio && arduino --verify --board $(_stm32l0opts projcfg) $THISLIB/examples/header_test/header_test.ino
+ - _projcfg CFG_au921 CFG_sx1276_radio && arduino --verify --board $(_stm32l0opts projcfg) $THISLIB/examples/header_test/header_test.ino
+ - _projcfg CFG_as923 CFG_sx1276_radio && arduino --verify --board $(_stm32l0opts projcfg) $THISLIB/examples/header_test/header_test.ino
+ - _projcfg CFG_as923 LMIC_COUNTRY_CODE=LMIC_COUNTRY_CODE_JP CFG_sx1276_radio && arduino --verify --board $(_stm32l0opts projcfg) $THISLIB/examples/header_test/header_test.ino
+ - _projcfg CFG_in866 CFG_sx1276_radio && arduino --verify --board $(_stm32l0opts projcfg) $THISLIB/examples/header_test/header_test.ino
+
+ - _projcfg CFG_us915 CFG_sx1276_radio && arduino --verify --board $(_stm32l0opts projcfg) $THISLIB/examples/header_test_lmic/header_test_lmic.ino
+ - _projcfg CFG_eu868 CFG_sx1276_radio && arduino --verify --board $(_stm32l0opts projcfg) $THISLIB/examples/header_test_lmic/header_test_lmic.ino
+ - _projcfg CFG_au921 CFG_sx1276_radio && arduino --verify --board $(_stm32l0opts projcfg) $THISLIB/examples/header_test_lmic/header_test_lmic.ino
+ - _projcfg CFG_as923 CFG_sx1276_radio && arduino --verify --board $(_stm32l0opts projcfg) $THISLIB/examples/header_test_lmic/header_test_lmic.ino
+ - _projcfg CFG_as923 LMIC_COUNTRY_CODE=LMIC_COUNTRY_CODE_JP CFG_sx1276_radio && arduino --verify --board $(_stm32l0opts projcfg) $THISLIB/examples/header_test_lmic/header_test_lmic.ino
+ - _projcfg CFG_in866 CFG_sx1276_radio && arduino --verify --board $(_stm32l0opts projcfg) $THISLIB/examples/header_test_lmic/header_test_lmic.ino
+
+ - _projcfg CFG_us915 CFG_sx1276_radio && arduino --verify --board $(_stm32l0opts projcfg) $THISLIB/examples/header_test_ttn/header_test_ttn.ino
+ - _projcfg CFG_eu868 CFG_sx1276_radio && arduino --verify --board $(_stm32l0opts projcfg) $THISLIB/examples/header_test_ttn/header_test_ttn.ino
+ - _projcfg CFG_au921 CFG_sx1276_radio && arduino --verify --board $(_stm32l0opts projcfg) $THISLIB/examples/header_test_ttn/header_test_ttn.ino
+ - _projcfg CFG_as923 CFG_sx1276_radio && arduino --verify --board $(_stm32l0opts projcfg) $THISLIB/examples/header_test_ttn/header_test_ttn.ino
+ - _projcfg CFG_as923 LMIC_COUNTRY_CODE=LMIC_COUNTRY_CODE_JP CFG_sx1276_radio && arduino --verify --board $(_stm32l0opts projcfg) $THISLIB/examples/header_test_ttn/header_test_ttn.ino
+ - _projcfg CFG_in866 CFG_sx1276_radio && arduino --verify --board $(_stm32l0opts projcfg) $THISLIB/examples/header_test_ttn/header_test_ttn.ino
 
 ### end of file ###
