#38 Final tweak - point dependency to working master branch

--- a/test_platformio_deps/platformio.ini
+++ b/test_platformio_deps/platformio.ini
@@ -2,6 +2,6 @@
 platform = atmelsam
 board = adafruit_feather_m0
 framework = arduino
-lib_deps = SPI, https://github.com/mcci-catena/arduino-lorawan#issue38
+lib_deps = SPI, https://github.com/mcci-catena/arduino-lorawan
 build_flags =
   -DCFG_us915
