--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ matrix:
   # C language tests
     - language: c
       before_install:
-        - apt-get install libc6-i386
+        - sudo apt-get install libc6-i386
         - "/sbin/start-stop-daemon --start --quiet --pidfile /tmp/custom_xvfb_1.pid --make-pidfile --background --exec /usr/bin/Xvfb -- :1 -ac -screen 0 1280x1024x16"
         - sleep 3
         - export DISPLAY=:1.0
@@ -47,7 +47,6 @@ matrix:
       - git clone --depth=1 https://github.com/mcci-catena/arduino-lmic.git $HOME/arduino_ide/libraries/arduino-lmic
       - arduino --install-boards mcci:samd
       - arduino --install-boards mcci:stm32
-      - ls -lR $HOME/.arduino15/packages/mcci/hardware/stm32/1.1.0/tools/linux
 
       script:
       #
