--- a/.travis.yml
+++ b/.travis.yml
@@ -55,7 +55,6 @@ matrix:
       - "echo $(_stm32l0opts) $(_stm32l0opts '' projcfg)"
       - "echo $(_samdopts) $(_samdopts '' projcfg)"
 
-      - arduino --verify --board $(_stm32l0opts '' us915) $MCCI_STM32_OPTS $THISLIB/examples/header_test/header_test.ino
       #
       # test each of the regions for SAMD.
       - arduino --verify --board $(_samdopts '' us915) $THISLIB/examples/header_test/header_test.ino
@@ -87,27 +86,26 @@ matrix:
 
       #
       # *** TESTS FOR STM32L0 / Catena 4551 ****
-      #  make sure you install the BSP above.
-      - arduino --verify --board $(_stm32l0opts '' us915  ) $THISLIB/examples/header_test/header_test.ino
-      - arduino --verify --board $(_stm32l0opts '' eu868  ) $THISLIB/examples/header_test/header_test.ino
-      - arduino --verify --board $(_stm32l0opts '' au921  ) $THISLIB/examples/header_test/header_test.ino
-      - arduino --verify --board $(_stm32l0opts '' as923  ) $THISLIB/examples/header_test/header_test.ino
-      - arduino --verify --board $(_stm32l0opts '' as923jp) $THISLIB/examples/header_test/header_test.ino
-      - arduino --verify --board $(_stm32l0opts '' in866  ) $THISLIB/examples/header_test/header_test.ino
+      - arduino --verify --board $(_stm32l0opts '' us915  ) $MCCI_STM32_OPTS $THISLIB/examples/header_test/header_test.ino
+      - arduino --verify --board $(_stm32l0opts '' eu868  ) $MCCI_STM32_OPTS $THISLIB/examples/header_test/header_test.ino
+      - arduino --verify --board $(_stm32l0opts '' au921  ) $MCCI_STM32_OPTS $THISLIB/examples/header_test/header_test.ino
+      - arduino --verify --board $(_stm32l0opts '' as923  ) $MCCI_STM32_OPTS $THISLIB/examples/header_test/header_test.ino
+      - arduino --verify --board $(_stm32l0opts '' as923jp) $MCCI_STM32_OPTS $THISLIB/examples/header_test/header_test.ino
+      - arduino --verify --board $(_stm32l0opts '' in866  ) $MCCI_STM32_OPTS $THISLIB/examples/header_test/header_test.ino
 
-      - arduino --verify --board $(_stm32l0opts '' us915  ) $THISLIB/examples/header_test_lmic/header_test_lmic.ino
-      - arduino --verify --board $(_stm32l0opts '' eu868  ) $THISLIB/examples/header_test_lmic/header_test_lmic.ino
-      - arduino --verify --board $(_stm32l0opts '' au921  ) $THISLIB/examples/header_test_lmic/header_test_lmic.ino
-      - arduino --verify --board $(_stm32l0opts '' as923  ) $THISLIB/examples/header_test_lmic/header_test_lmic.ino
-      - arduino --verify --board $(_stm32l0opts '' as923jp) $THISLIB/examples/header_test_lmic/header_test_lmic.ino
-      - arduino --verify --board $(_stm32l0opts '' in866  ) $THISLIB/examples/header_test_lmic/header_test_lmic.ino
+      - arduino --verify --board $(_stm32l0opts '' us915  ) $MCCI_STM32_OPTS $THISLIB/examples/header_test_lmic/header_test_lmic.ino
+      - arduino --verify --board $(_stm32l0opts '' eu868  ) $MCCI_STM32_OPTS $THISLIB/examples/header_test_lmic/header_test_lmic.ino
+      - arduino --verify --board $(_stm32l0opts '' au921  ) $MCCI_STM32_OPTS $THISLIB/examples/header_test_lmic/header_test_lmic.ino
+      - arduino --verify --board $(_stm32l0opts '' as923  ) $MCCI_STM32_OPTS $THISLIB/examples/header_test_lmic/header_test_lmic.ino
+      - arduino --verify --board $(_stm32l0opts '' as923jp) $MCCI_STM32_OPTS $THISLIB/examples/header_test_lmic/header_test_lmic.ino
+      - arduino --verify --board $(_stm32l0opts '' in866  ) $MCCI_STM32_OPTS $THISLIB/examples/header_test_lmic/header_test_lmic.ino
 
-      - arduino --verify --board $(_stm32l0opts '' us915  ) $THISLIB/examples/header_test_ttn/header_test_ttn.ino
-      - arduino --verify --board $(_stm32l0opts '' eu868  ) $THISLIB/examples/header_test_ttn/header_test_ttn.ino
-      - arduino --verify --board $(_stm32l0opts '' au921  ) $THISLIB/examples/header_test_ttn/header_test_ttn.ino
-      - arduino --verify --board $(_stm32l0opts '' as923  ) $THISLIB/examples/header_test_ttn/header_test_ttn.ino
-      - arduino --verify --board $(_stm32l0opts '' as923jp) $THISLIB/examples/header_test_ttn/header_test_ttn.ino
-      - arduino --verify --board $(_stm32l0opts '' in866  ) $THISLIB/examples/header_test_ttn/header_test_ttn.ino
+      - arduino --verify --board $(_stm32l0opts '' us915  ) $MCCI_STM32_OPTS $THISLIB/examples/header_test_ttn/header_test_ttn.ino
+      - arduino --verify --board $(_stm32l0opts '' eu868  ) $MCCI_STM32_OPTS $THISLIB/examples/header_test_ttn/header_test_ttn.ino
+      - arduino --verify --board $(_stm32l0opts '' au921  ) $MCCI_STM32_OPTS $THISLIB/examples/header_test_ttn/header_test_ttn.ino
+      - arduino --verify --board $(_stm32l0opts '' as923  ) $MCCI_STM32_OPTS $THISLIB/examples/header_test_ttn/header_test_ttn.ino
+      - arduino --verify --board $(_stm32l0opts '' as923jp) $MCCI_STM32_OPTS $THISLIB/examples/header_test_ttn/header_test_ttn.ino
+      - arduino --verify --board $(_stm32l0opts '' in866  ) $MCCI_STM32_OPTS $THISLIB/examples/header_test_ttn/header_test_ttn.ino
 
 # PlatformIO dependency test
     - language: python
