Make the test work for non-PR's, too

--- a/.travis.yml
+++ b/.travis.yml
@@ -123,7 +123,11 @@ matrix:
         - echo "platform = atmelsam" >> platformio.ini
         - echo "board = adafruit_feather_m0" >> platformio.ini
         - echo "framework = arduino" >> platformio.ini
-        - echo "lib_deps = SPI, https://github.com/${TRAVIS_PULL_REQUEST_SLUG}#${TRAVIS_PULL_REQUEST_BRANCH}" >> platformio.ini
+        - if [ "${TRAVIS_PULL_REQUEST_SLUG}" = "" ]; then
+        -   echo "lib_deps = SPI, https://github.com/${TRAVIS_REPO_SLUG}" >> platformio.ini
+        - else
+        -   echo "lib_deps = SPI, https://github.com/${TRAVIS_PULL_REQUEST_SLUG}#${TRAVIS_PULL_REQUEST_BRANCH}" >> platformio.ini
+        - fi
         - echo "build_flags =" >> platformio.ini
         - echo "  -DCFG_us915" >> platformio.ini
         - cat platformio.ini
