--- a/.travis.yml
+++ b/.travis.yml
@@ -84,6 +84,15 @@ matrix:
       - arduino --verify --board $(_samdopts '' as923jp) $THISLIB/examples/header_test_ttn/header_test_ttn.ino
       - arduino --verify --board $(_samdopts '' in866) $THISLIB/examples/header_test_ttn/header_test_ttn.ino
 
+      - arduino --verify --board $(_samdopts '' us915) $THISLIB/examples/simple/simple.ino
+      - arduino --verify --board $(_samdopts '' eu868) $THISLIB/examples/simple/simple.ino
+      # V1.1.0 of the samd bsp doesn't support au921 correctly -- test with projcfg
+      # - arduino --verify --board $(_samdopts '' au921) $THISLIB/examples/simple/simple.ino
+      - _projcfg CFG_au921 CFG_sx1276_radio && arduino --verify --board $(_samdopts '' projcfg) $THISLIB/examples/simple/simple.ino
+      - arduino --verify --board $(_samdopts '' as923) $THISLIB/examples/simple/simple.ino
+      - arduino --verify --board $(_samdopts '' as923jp) $THISLIB/examples/simple/simple.ino
+      - arduino --verify --board $(_samdopts '' in866) $THISLIB/examples/simple/simple.ino
+
       - arduino --verify --board $(_samdopts '' us915) $THISLIB/examples/simple_feather/simple_feather.ino
       - arduino --verify --board $(_samdopts '' eu868) $THISLIB/examples/simple_feather/simple_feather.ino
       # V1.1.0 of the samd bsp doesn't support au921 correctly -- test with projcfg
@@ -115,6 +124,14 @@ matrix:
       - arduino --verify --board $(_stm32l0opts '' as923  ) $MCCI_STM32_OPTS $THISLIB/examples/header_test_ttn/header_test_ttn.ino
       - arduino --verify --board $(_stm32l0opts '' as923jp) $MCCI_STM32_OPTS $THISLIB/examples/header_test_ttn/header_test_ttn.ino
       - arduino --verify --board $(_stm32l0opts '' in866  ) $MCCI_STM32_OPTS $THISLIB/examples/header_test_ttn/header_test_ttn.ino
+
+      - arduino --verify --board $(_stm32l0opts '' us915  ) $MCCI_STM32_OPTS $THISLIB/examples/simple/simple.ino
+
+      # test simple config on a variety of boards.
+      - arduino --verify --board $(_stm32l0opts 'mcci_catena_4610' us915  )  $MCCI_STM32_OPTS $THISLIB/examples/simple/simple.ino
+      - arduino --verify --board $(_stm32l0opts 'mcci_catena_4611' us915  )  $MCCI_STM32_OPTS $THISLIB/examples/simple/simple.ino
+      - arduino --verify --board $(_stm32l0opts 'mcci_catena_4612' us915  )  $MCCI_STM32_OPTS $THISLIB/examples/simple/simple.ino
+      - arduino --verify --board $(_stm32l0opts 'mcci_catena_4801' us915  )  $MCCI_STM32_OPTS $THISLIB/examples/simple/simple.ino
 
 # PlatformIO dependency test
     - language: python
