--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,15 @@
 dist: trusty
 sudo: false
 
+env:
+ global:
+  - IDE_VERSION=1.8.8
+
+cache:
+  directories:
+  - $HOME/.arduino15
+  - $HOME/arduino_ide
+
 # Thanks, https://stackoverflow.com/questions/27644586/how-to-set-up-travis-ci-with-multiple-languages !
 matrix:
   include:
@@ -12,10 +21,11 @@ matrix:
         - "/sbin/start-stop-daemon --start --quiet --pidfile /tmp/custom_xvfb_1.pid --make-pidfile --background --exec /usr/bin/Xvfb -- :1 -ac -screen 0 1280x1024x16"
         - sleep 3
         - export DISPLAY=:1.0
-        - wget http://downloads.arduino.cc/arduino-1.8.5-linux64.tar.xz
-        - tar xf arduino-1.8.5-linux64.tar.xz
-        - mv arduino-1.8.5 $HOME/arduino_ide
-        - export PATH="$HOME/arduino_ide:$PATH"
+        - export ARDUINO_IDE=arduino_ide/${IDE_VERSION}
+        - export ARDUINO_LIBS="$HOME/Arduino/libraries"
+        - if [ ! -d "$HOME/arduino_ide" ] ; then mkdir "$HOME/arduino_ide" ; fi
+        - if [ ! -d "$HOME/$ARDUINO_IDE" ] ; then { echo "fetch" && wget http://downloads.arduino.cc/arduino-${IDE_VERSION}-linux64.tar.xz && echo "untar" && tar xf arduino-${IDE_VERSION}-linux64.tar.xz && echo "move" && mv -f arduino-${IDE_VERSION} $HOME/${ARDUINO_IDE} ; } || { echo "IDE install failed"; exit 1; } ; else echo "IDE already installed" ; fi
+        - export PATH="$HOME/${ARDUINO_IDE}:$PATH"
         #
         # arduino_lorawan looks for project_config things, so we must put
         # things in the canonical place
