--- a/.travis.yml
+++ b/.travis.yml
@@ -45,10 +45,12 @@ matrix:
         #
         - "function _samdopts { echo mcci:samd:${1:-mcci_catena_4450}:lorawan_region=${2:-us915} ; }"
         - "function _stm32l0opts { echo mcci:stm32:${1:-mcci_catena_4551}:lorawan_region=${2:-us915},opt=${3:-osstd},xserial=${4:-generic},upload_method=${6:-STLink},sysclk=${7:-pll32m} ; }"
+
         #
-        # Put one or more arguments into lmic_project_config.h as  `#define $i\n`
-        # If an argument is A=B, produce '#define A B".'
-        - 'function _projcfg { for i in "$@" ; do echo $i | awk ''BEGIN { FS="=" } { if ($2 == "") $2 = 1; printf("#define %s %s\n", $1, $2); } ''; done  > $HOME/arduino_ide/libraries/arduino-lmic/project_config/lmic_project_config.h ; }'
+        # Put one or more arguments into lmic_project_config.h as  `#define $i 1\n` or `#define $i $arg`
+        - function _splitdef { if [ "$1" = "${1/=/}" ]; then echo "$1" 1 ; else echo "${1/=/ }" ; fi ; }
+        - function _projcfg { for i in "$@" ; do printf '#define %s %s\n' $(_splitdef "$i") ; done  > "$ARDUINO_LIBS"/arduino-lmic/project_config/lmic_project_config.h ; }
+
         #
         # Handy macro to deal with expected failures.
         - 'function _expect_failure { if [ $? -eq 0 ]; then echo "Suceeded, but should have failed!" ; echo project_config/lmic_project_config.h ; cat $HOME/arduino_ide/libraries/arduino-lmic/project_config/lmic_project_config.h ; return 1 ; else echo "Failed, as expected"; return 0 ; fi ; }'
